categoty page - slide+

--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
     <div>
         <p class="why_we_slogan bigger_center">Почему ADVANCE</p>
     </div>
-    <div class=why_we_wrapper>
+    <div class="why_we_wrapper">
         <div class="why_container"  data-aos="zoom-in">
             <img data-lazy="src/img/main/lamp.svg" src="src/img/main/lamp.svg" alt="decoration">
             <p>Мы воплотим в жизнь<br>
