--- a/category-page.html
+++ b/category-page.html
@@ -229,8 +229,16 @@
     <div class="main_service_container category_service">
         <div class="main_service_top_container">
             <div class="main_top_triangles">
-                <img data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
-                <img data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
+                <div class="exodus_container">
+                    <div class="exodus_triangle">
+                        <img class="triangle_shape" data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
+                    </div>
+                </div>
+                <div class="tri_little">
+                    <div class="triangle__figure--small">
+                        <img  data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
+                    </div>
+                </div>
             </div>
         </div>
         <div class="category_fix2">
@@ -472,9 +480,9 @@
         </div>
         <div class="footer_top_right">
             <div class="footer_triangles">
-                <div class="exodus__ps-shape">
-                    <div class="exodus__ps-shape--triangle">
-                        <img class="exodus__ps-shape__svg" data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
+                <div class="exodus_container">
+                    <div class="exodus_triangle">
+                        <img class="triangle_shape" data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
                     </div>
                 </div>
             </div>
