--- a/index.html
+++ b/index.html
@@ -155,9 +155,9 @@
                 <p class="bigger">Наши услуги</p>
             </div>
             <div class="main_top_triangles">
-                <div class="exodus__ps-shape">
-                    <div class="exodus__ps-shape--triangle">
-                        <img class="exodus__ps-shape__svg" data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
+                <div class="exodus_container">
+                    <div class="exodus_triangle">
+                        <img class="triangle_shape" data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
                     </div>
                 </div>
                 <div class="tri_little">
@@ -403,8 +403,16 @@
 <section class="main_how_we_work">
     <div class="main_how_we_work_top">
         <div class="triangles">
-            <img data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
-            <img data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
+            <div class="exodus_container2">
+                <div class="exodus_triangle">
+                    <img data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
+                </div>
+            </div>
+            <div class="tri_little">
+                <div class="triangle__figure--small">
+                    <img  data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
+                </div>
+            </div>
         </div>
         <div class="how_we_work_left">
             <p class="bigger">Как мы работаем</p>
@@ -418,9 +426,21 @@
                     жаренные члены предложения залетают прямо в рот.</p>
             </div>
             <div class="triangles2">
-                <img data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
-                <img data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
-                <img data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
+                <div>
+                    <div class="triangle__figure--large">
+                        <img data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
+                    </div>
+                </div>
+                <div>
+                    <div class="triangle__figure--small">
+                        <img data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
+                    </div>
+                </div>
+                <div>
+                    <div class="triangle__figure--medium">
+                        <img data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
+                    </div>
+                </div>
             </div>
         </div>
         <div class="how_we_work_right">
@@ -440,7 +460,7 @@
     </div>
     <div class="main_our_works_img_wrapper">
         <div class="main_gallery">
-            <div class="gallery_item" data-aos="zoom-out">
+            <div class="gallery_item">
                 <figure class="img-container">
                     <img class="thumb" data-lazy="src/img/main/best/1E1R1841.png"  
                     data-thumb="src/img/main/best/1E1R1841.png" 
@@ -550,9 +570,9 @@
         </div>
         <div class="footer_top_right">
             <div class="footer_triangles">
-                <div class="exodus__ps-shape">
-                    <div class="exodus__ps-shape--triangle">
-                        <img class="exodus__ps-shape__svg" data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
+                <div class="exodus_container">
+                    <div class="exodus_triangle">
+                        <img class="triangle_shape" data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
                     </div>
                 </div>
             </div>
