--- a/about-us.html
+++ b/about-us.html
@@ -93,9 +93,21 @@
     <div class="about_us_top">
         <p class="fs48_r">ADVANCE - a3a3a ololo</p>
         <div class="triangles2">
-            <img data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
-            <img data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
-            <img data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
+            <div>
+                <div class="triangle__figure--small">
+                    <img data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
+                </div>
+            </div>
+            <div>
+                <div class="triangle__figure--large">
+                    <img data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
+                </div>
+            </div>
+            <div>
+                <div class="triangle__figure--medium">
+                    <img data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
+                </div>
+            </div>
         </div>
     </div>
     <div class="xxx1">
