--- a/index.html
+++ b/index.html
@@ -138,6 +138,10 @@
        </div>
 </header>
 <!--HEADER END-->
+
+<!--SECTIONS CONTAINER-->
+
+<div class="sections_container">
 <!--TOP SECTION-->
 <section class="main_top_wrapper">
     <p class="very_big">ADVANCE</p>
@@ -523,6 +527,10 @@
         <div class="why_we_slogan bigger_center"><div class="adv_btn"><span><a href="#" >Портфолио</a></span></div></div>
     </div>
 </section>
+
+</div>
+<!--SECTIONS CONTAINER END-->
+
 <!--FOOTER-->
 <footer>
     <div class="footer_top">
