--- a/promo.html
+++ b/promo.html
@@ -154,14 +154,14 @@
                         <img class="triangle_shape" data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
                     </div>
                 </div>
-                <div class="tri_little">
-                    <div class="triangle__figure--small">
-                        <img  data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
+                <div class="exodus_container">
+                    <div class="exodus_triangle">
+                        <img class="triangle_shape" data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
                     </div>
                 </div>
             </div>
 
-            <div class="service_triangles">
+            <div class="service_triangles" style="display: none">
                 <div>
                     <div class="triangle__figure--small">
                         <img data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
@@ -188,7 +188,7 @@
     // RUNNING TITLE
     var replaceText = {
         $text_container: null,
-        replace_delay: 1000,
+        replace_delay: 1500,
         text_arr: [],
         current_text_key: 0,
         current_text: '',
@@ -220,8 +220,8 @@
             this.current_text_key = (this.current_text_key + 1) % this.text_arr.length;
         },
         typeDelay: function() {
-            var min_delay = 10,
-                max_delay = 150;
+            var min_delay = 50,
+                max_delay = 100;
 
             return Math.random() * (max_delay - min_delay) + min_delay;
         },
