--- a/category-page.html
+++ b/category-page.html
@@ -139,6 +139,7 @@
 <!--HEADER END-->
 <div class="header_fix">
 </div>
+
 <section class="category_wrapper">
     <div class="category_container">
         <div class="category_top_container">
@@ -171,9 +172,18 @@
             </div>
         </div>
         <div class="service_triangles">
-            <img data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
-            <img data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
-            <img data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
+            <div class="triangles2">
+                <div>
+                    <div class="triangle__figure--large">
+                        <img data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
+                    </div>
+                </div>
+                <div>
+                    <div class="triangle__figure--medium">
+                        <img data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <div class="main_service_bottom_container xxx4">
@@ -527,7 +537,7 @@
             </div>
             <div class="f_mail">
                 <p>Мы всегда открыты к сотрудничеству с заказчиками, поставщиками материалов, производителями и рекламными агенствами. Отправьте нам запрос и мы свяжемся с вами в течении часа<br>
-                <span><a href="mailto:advanced.kh.ua@gmail.com" class="orange">advanced.kh.ua@gmail.com</a></span>
+                    <span><a href="mailto:advanced.kh.ua@gmail.com" class="orange">advanced.kh.ua@gmail.com</a></span>
                 </p>
             </div>
         </div>
