--- a/contacts.html
+++ b/contacts.html
@@ -152,13 +152,17 @@
                 </div>
             </div>
             <div class="footer_triangles">
-                <img data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
-                <img data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
+                <img data-lazy="src/img/footer/Triangle.svg" class="orbit" src="/" alt="decoration">
+                <img data-lazy="src/img/footer/Triangle.svg" class="orbit_rev" src="/" alt="decoration">
             </div>
         </div>
         <div class="footer_top_right">
             <div class="footer_triangles">
-                <img data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
+                <div class="exodus_container">
+                    <div class="exodus_triangle">
+                        <img class="triangle_shape" data-lazy="src/img/footer/Triangle.svg" src="/" alt="decoration">
+                    </div>
+                </div>
             </div>
             <div class="footer_contacts">
                 <div class="f_contacts">
@@ -168,8 +172,10 @@
                     <div>
                         <p class="orange">Наш адрес</p>
                         <p>Украина, Харьков</p>
-                        <p>ул.Мироносицкая, 88</p>
-                        <p>61023</p>
+                        <p>ул.Клочковская, 192-A</p>
+                        <p>БЦ "МІСТО"</p>
+                        <p>офис №124</p>
+                        <p>61145</p>
                     </div>
                 </div>
                 <div class="f_contacts">
@@ -190,7 +196,7 @@
                     </span>
                     <div>
                         <p class="orange">Telegram</p>
-                        <p><a href="tel://+30937617616 ">+3(093)761 761 6</a></p>
+                        <p><a href="tel://+380937617616 ">+38(093)761 761 6</a></p>
                     </div>
                 </div>
             </div>
@@ -223,7 +229,7 @@
             </div>
             <div>
                 <div class="footer_copyright">
-                    <p class="r">Copyright &copy; 2019-2020 ADVANCE. All rights reserved</p>
+                    <p class="r">Copyright &copy; 2020 ADVANCE. All rights reserved</p>
                 </div>
             </div>
         </div>
@@ -234,12 +240,13 @@
             </div>
             <div class="social_wrapper">
                 <span><a href="#"><img data-lazy="src/img/footer/insta.svg" src="/" alt="instagram icon"></a></span>
+                <span><a href="#"><img data-lazy="src/img/footer/linked.svg" src="/" alt="linkedin icon"></a></span>
                 <span><a href="#"><img data-lazy="src/img/footer/facebook.svg" src="/" alt="facebook icon"></a></span>
             </div>
         </div>
     </div>
     <div class="footer_mobile_copy">
-        <p>Copyright &copy; 2019-2020 ADVANCE.<br> All rights reserved</p>
+        <p>Copyright &copy; 2020 ADVANCE.<br> All rights reserved</p>
     </div>
 </footer>
 </body>
