--- a/index.html
+++ b/index.html
@@ -89,7 +89,6 @@
                     </li>
                     <li class="fs20 m_li"><a href="portfolio.html" class="m_li">Портфолио</a></li>
                     <li class="fs20 m_li"><a href="about-us.html" class="m_li">О нас</a></li>
-                    <li class="fs20 m_li"><a href="news.html" class="m_li">Новости</a></li>
                     <li class="fs20 m_li"><a href="contacts.html" class="m_li">Контакты</a></li>
                 </ul>
             </nav>
@@ -129,7 +128,6 @@
                            </ul>
                        </li>
                        <li><a href="about-us.html" class="m_li">О нас</a></li>
-                       <li><a href="news.html" class="m_li">Новости</a></li>
                        <li><a href="contacts.html" class="m_li">Контакты</a></li>
                    </ul>
                </div>
@@ -142,6 +140,7 @@
 <!--SECTIONS CONTAINER-->
 
 <div class="sections_container">
+
 <!--TOP SECTION-->
 <section class="main_top_wrapper">
     <p class="very_big">ADVANCE</p>
@@ -639,10 +638,9 @@
                 <div class="footer_nav">
                     <nav class="main_menu">
                         <ul class="menu_ul">
-                            <li class="fs20">О нас</li>
-                            <li class="fs20">Портфолио</li>
-                            <li class="fs20">Новости</li>
-                            <li class="fs20">Контакты</li>
+                            <li class="fs20"><a href="about-us.html">О нас</a></li>
+                            <li class="fs20"><a href="portfolio.html">Портфолио</a></li>
+                            <li class="fs20"><a href="contacts.html">Контакты</a></li>
                         </ul>
                     </nav>
                 </div>
