--- a/category-page.html
+++ b/category-page.html
@@ -230,6 +230,13 @@
       </span>
     </div>
 </section>
+<!-- SLIDER  END-->
+<section class="mobile_our_works">
+    <div><img data-lazy="src/img/subcategory/letters/1.jpg" src="/" alt="/"></div>
+    <div><img data-lazy="src/img/subcategory/letters/2.jpg" src="/" alt="/"></div>
+    <div><img data-lazy="src/img/subcategory/letters/3.jpg" src="/" alt="/"></div>
+    <div><img data-lazy="src/img/subcategory/letters/4.jpg" src="/" alt="/"></div>
+</section>
 <section class="main_our_works xxx5">
     <div>
         <div class="why_we_slogan bigger_center"><div class="adv_btn"><span><a href="#" >Портфолио</a></span></div></div>
