--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
 <!--PORTFOLIO-->
 <section class="main_our_works xxx5">
     <div>
-        <div class="why_we_slogan bigger_center"><div class="adv_btn"><span><a href="#" >Портфолио</a></span></div></div>
+        <div class="why_we_slogan bigger_center"><div class="adv_btn"><span><a href="portfolio.html" >Портфолио</a></span></div></div>
     </div>
 </section>
 
@@ -620,7 +620,8 @@
                 </div>
             </div>
             <div class="contact_map">
-                <img data-lazy="src/img/black.jpg" src="/" alt="Black Image" />
+<!--                <img data-lazy="src/img/black.jpg" src="/" alt="Black Image" />-->
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2218.7621923525!2d36.21149103421815!3d50.02160883192264!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4127a139af03673f%3A0x241223358d97220d!2z0JrQu9C-0YfQutC-0LLRgdC60LDRjyDRg9C7LiwgMTkyYSwg0KXQsNGA0YzQutC-0LIsINCl0LDRgNGM0LrQvtCy0YHQutCw0Y8g0L7QsdC70LDRgdGC0YwsIDYxMDAw!5e0!3m2!1sru!2sua!4v1588772724261!5m2!1sru!2sua"  frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             </div>
             <div class="f_mail">
                 <p>Мы всегда открыты к сотрудничеству с заказчиками, поставщиками материалов, производителями и рекламными агенствами. Отправьте нам запрос и мы свяжемся с вами в течении часа<br>
