--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
     </div>
 </section>
 <!--PORTFOLIO-->
-<section class="main_our_works xxx5">
+<section class="main_our_works xxx2_2">
     <div>
         <div class="why_we_slogan bigger_center"><div class="adv_btn"><span><a href="portfolio.html" >Портфолио</a></span></div></div>
     </div>
